# linear-motion

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  mise.toml  release-plz.toml
.github/workflows/: release-plz.yml
docs/: linear-api-docs.md  linear.graphql  motion-api-docs.md
prd/: version-one.json  version-one.md  version-two.json  version-two.md
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs
src/clients/: linear.rs  mod.rs  motion.rs
src/config/: loader.rs  mod.rs  models.rs
src/db/: mapping.rs  mod.rs  status.rs
src/ipc/: client.rs  server.rs
src/sync/: engine.rs  mod.rs  orchestrator.rs
