[package]
name = "linear-motion"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/arlyon/linear-motion"
description = "A CLI tool for syncing between Linear and Motion"
license = "MIT OR Apache-2.0"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# HTTP clients and middleware
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
fjall = "2.11.2"

# GraphQL client
graphql_client = { version = "0.14", features = ["reqwest"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
directories = "6.0"

# Webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# IPC
tokio-util = { version = "0.7", features = ["codec"] }
serde_cbor = "0.11"

# Rate limiting
governor = "0.6"
serde_path_to_error = "0.1.17"
futures = "0.3.31"

[dev-dependencies]
tokio-test = "0.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
